--- a/src/app/company/company-list/company-list.component.html
+++ b/src/app/company/company-list/company-list.component.html
@@ -1,4 +1,9 @@
-<table>
+<h1>
+  Companies
+  <button class="btn btn-success float-end">Add</button>
+</h1>
+
+<table class="table table-striped">
   <thead>
     <tr>
       <th>Name</th>
@@ -13,7 +18,10 @@
         <td>{{ company.name }}</td>
         <td>{{ company.email }}</td>
         <td>{{ company.phone }}</td>
-        <td></td>
+        <td class="company-actions">
+          <button class="btn btn-primary">Edit</button>
+          <button class="btn btn-danger">Delete</button>
+        </td>
       </tr>
     }
     @empty {
