--- a/src/app/company/company-list/company-list.component.html
+++ b/src/app/company/company-list/company-list.component.html
@@ -13,7 +13,7 @@
     </tr>
   </thead>
   <tbody>
-    @for (company of companies; track $index) {
+    @for (company of (companies$ | async); track $index) {
       <tr>
         <td>{{ company.name }}</td>
         <td>{{ company.email }}</td>
