--- a/src/app/company/company-list/company-list.component.html
+++ b/src/app/company/company-list/company-list.component.html
@@ -3,33 +3,7 @@
   <button class="btn btn-success float-end">Add</button>
 </h1>
 
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Email</th>
-      <th>Phone</th>
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-    @for (company of (companies$ | async); track $index) {
-      <tr>
-        <td>{{ company.name }}</td>
-        <td>{{ company.email }}</td>
-        <td>{{ company.phone }}</td>
-        <td class="company-actions">
-          <button class="btn btn-primary">Edit</button>
-          <button class="btn btn-danger" (click)="deleteCompany(company.id)">Delete</button>
-        </td>
-      </tr>
-    }
-    @empty {
-      <tr>
-        <td colspan="4">
-          No companies found.
-        </td>
-      </tr>
-    }
-  </tbody>
-</table>
+<fbc-company-table
+  [companies]="(companies$ | async) || []"
+  (deleteCompanyClicked)="deleteCompany($event)"
+></fbc-company-table>
