added company-edit component and routes for add/edit

--- a/src/app/company/company-list/company-list.component.html
+++ b/src/app/company/company-list/company-list.component.html
@@ -1,6 +1,6 @@
 <h1>
   Companies
-  <button class="btn btn-success float-end">Add</button>
+  <button class="btn btn-success float-end" [routerLink]="['/company/add']">Add</button>
 </h1>
 
 <fbc-company-table
