--- a/src/app/company/company-edit/company-edit.component.html
+++ b/src/app/company/company-edit/company-edit.component.html
@@ -1,1 +1,51 @@
-<p>company-edit works!</p>
+<form [formGroup]="formGroup">
+  <div class="form-group">
+    <label for="name">Name</label>
+    <input
+      type="text"
+      class="form-control"
+      name="name"
+      formControlName="name"
+    />
+    <div *ngIf="f().name.touched && f().name.hasError('required')" class="alert alert-danger">
+      Name is required
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label for="email">Email</label>
+    <input
+      type="text"
+      class="form-control"
+      name="email"
+      formControlName="email"
+    />
+    <div *ngIf="f().email.touched && !!f().email.errors" class="alert alert-danger">
+      Email has error {{ f().email.errors | json }}
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label for="phone">Phone</label>
+    <input
+      type="number"
+      class="form-control"
+      name="phone"
+      formControlName="phone"
+    />
+    <div *ngIf="f().phone.touched && f().phone.hasError('required')" class="alert alert-danger">
+      Phone is required
+    </div>
+  </div>
+
+  <div class="form-group">
+    <button
+      type="button"
+      class="btn btn-primary"
+      [disabled]="!formGroup.valid"
+      (click)="saveCompany()"
+    >
+      Submit
+    </button>
+  </div>
+</form>
