added company edit functionality

--- a/src/app/company/company-edit/company-edit.component.html
+++ b/src/app/company/company-edit/company-edit.component.html
@@ -28,7 +28,7 @@
   <div class="form-group">
     <label for="phone">Phone</label>
     <input
-      type="number"
+      type="text"
       class="form-control"
       name="phone"
       formControlName="phone"
