--- a/src/app/company/company-table/company-table.component.html
+++ b/src/app/company/company-table/company-table.component.html
@@ -15,7 +15,7 @@
         <td>{{ company.email }}</td>
         <td>{{ company.phone }}</td>
         <td class="company-actions">
-          <button class="btn btn-primary">Edit</button>
+          <button class="btn btn-primary" [routerLink]="['/company/edit', company.id]">Edit</button>
           <button class="btn btn-danger" (click)="deleteCompany(company)">Delete</button>
         </td>
       </tr>
