added admin module and deferred loading

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,11 @@
           Companies ({{ companyCount$ | async }})
         </a>
       </li>
+      <li class="nav-item" [routerLinkActive]="'active'">
+        <a class="nav-link" [routerLink]="['/admin']">
+          Admin
+        </a>
+      </li>
     </ul>
   </div>
 </nav>
