--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,9 +8,7 @@
         </a>
       </li>
       <li class="nav-item" [routerLinkActive]="'active'">
-        <a class="nav-link" [routerLink]="['/admin']">
-          Admin
-        </a>
+        <a class="nav-link" [routerLink]="['/admin']"> Admin </a>
       </li>
     </ul>
   </div>
@@ -19,3 +17,5 @@
 <div class="container">
   <router-outlet></router-outlet>
 </div>
+
+<p>isProduction: {{ isProduction }}</p>
